# plato

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.rst  pylintrc  pyproject.toml  setup.cfg
.github/actions/setup-project/: action.yml
.github/workflows/: publish-docs.yml  tests.yml  workflow.yml
docs/: conf.py  contributing.rst  getting-started.rst  index.rst  user-guide.rst  versions.json  versions_manifest.py
docs/_static/css/: versioning.css
docs/_static/js/: versioning.js
docs/_templates/: layout.html  versions.html
docs/api/: plato.__version__.rst  plato.providers.rst  plato.rst
docs/en/main/: .buildinfo  contributing.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html  vision.html
docs/en/stable/: .buildinfo  contributing.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
docs/en/v0.1.0/: genindex.html  getting-started.html  objects.inv  py-modindex.html  search.html  user-guide.html
docs/en/v0.1.1/: contributing.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  (+4 more)
examples/: readme.py  shop.py
plato/: __init__.py  __version__.py  context.py  formclasses.py  providers.py  shapeclasses.py  sugar.py
plato/internal/: graph.py  weak_id_dict.py
plato/providers/: __init__.py  base.py  common.py  faker.py
scripts/: release.sh
tests/: test_api.py
tests/internal/: test_graph.py  test_weak_id_dict.py
(+65 files in other folders)
